<resources>
    <string name="app_name">"Safe Loan "</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_remember_login">Remember login info</string>
    <string name="title_activity_personal_info">Personal Info</string>
    <string name="prompt_ssid">Social Security ID</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_addr">Home Address</string>
    <string name="prompt_phone">Phone (###)###-####</string>
    <string name="action_submit">Submit</string>

</resources>
