<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.amberwaves.safeloan.PersonalInfoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:hint="@string/prompt_fullname" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editText2"
            android:hint="@string/prompt_addr" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText3"
            android:hint="@string/prompt_phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText4"
            android:hint="@string/prompt_email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText5"
            android:hint="@string/prompt_ssid"
            android:numeric="integer" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Change Password"
            android:id="@+id/changePasswdButton"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Push Notifications"
            android:id="@+id/pushNotifyCheck"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location Access Permission"
            android:id="@+id/locationPermissionCheck"
            android:checked="false" />

        <Button
            style="?android:textAppearanceSmall"
            android:id="@+id/submitInfoButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_submit"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="bottom" />

    </LinearLayout>
</RelativeLayout>
